# dpdp_tool

./: .gitignore  CLAUDE.md  MANIFEST.in  README.md  frappe-setup-guide.md  license.txt  pyproject.toml  setup.py  test_pdf.py
dpdp_tool/: api.py  dpdp_assessment.py  hooks.py  modules.txt  pdf_generator.py
dpdp_tool/doctype/dpdp_assessment/: dpdp_assessment.json
dpdp_tool/doctype/dpdp_consult_request/: dpdp_consult_request.py
dpdp_tool/dpdp_tool/: __init__.py
dpdp_tool/dpdp_tool/doctype/dpdp_assessment/: dpdp_assessment.py
dpdp_tool/dpdp_tool/doctype/dpdp_consult_request/: dpdp_consult_request.json
dpdp_tool/fixtures/: client_script_dpdp_assessment.json  dpdp_assessment.json  dpdp_consult_request.json  email_template_assessment_report.json  email_template_consult_internal.json  email_template_dpdp_report.json  module_def.json
dpdp_tool/public/: dpdp-config.json
dpdp_tool/public/css/: dpdp.css
dpdp_tool/public/js/: dpdp-assess.js  dpdp-index.js
dpdp_tool/www/: assess.html  index.html  index.py
