[project]
name = "dpdp_tool"
authors = [
    { name = "Tech4Dev", email = "dpdp@projecttech4dev.org" }
]
description = "DPDP Readiness Navigator for NGOs"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
dynamic = ["version"]
dependencies = [
    "anthropic>=0.20.0"
]

[project.urls]
Homepage = "https://dpdp.projecttech4dev.org"
Repository = "https://github.com/project-tech4dev/dpdp"

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "dpdp_tool"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<17.0.0-dev"